# fpreputils

./: .gitignore  README.md  pyproject.toml  setup.py
fpreputils/: __init__.py  fmriprep.py
